--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
-    "@chakra-ui/react": "^1.8.5",
+    "@chakra-ui/react": "^1.4.2",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.8",
     "apexcharts": "^3.33.1",
-    "faker": "5.5.3",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
     "react": "17.0.2",
@@ -32,6 +31,7 @@
     "@types/react": "^17.0.39",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "faker": "^5.5.3",
     "miragejs": "^0.1.43",
     "typescript": "^4.5.5"
   }
