--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
-    "@chakra-ui/react": "^1.4.2",
+    "@chakra-ui/react": "^1.8.5",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.8",
     "apexcharts": "^3.33.1",
+    "faker": "5.5.3",
     "framer-motion": "^6.2.8",
     "next": "12.1.0",
     "react": "17.0.2",
@@ -23,6 +24,7 @@
     "react-hook-form": "^7.27.1",
     "react-icons": "^4.3.1",
     "react-query": "^3.34.16",
+    "miragejs": "^0.1.43",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -31,8 +33,6 @@
     "@types/react": "^17.0.39",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
-    "faker": "^5.5.3",
-    "miragejs": "^0.1.43",
     "typescript": "^4.5.5"
   }
 }
