--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "@emotion/styled": "^11",
     "@hookform/resolvers": "^2.8.8",
     "apexcharts": "^3.33.0",
+    "axios": "^0.26.1",
+    "faker": "5.5.3",
     "framer-motion": "^6",
+    "miragejs": "^0.1.43",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-apexcharts": "^1.3.9",
@@ -31,8 +34,6 @@
     "@types/react": "^17.0.39",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
-    "faker": "5.5.3",
-    "miragejs": "^0.1.43",
     "typescript": "^4.5.5"
   }
 }
